--- a/build.gradle
+++ b/build.gradle
@@ -8,55 +8,57 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 
 dependencies {
-    testCompile 'io.reactivex:rxjava:1.2.2'
+    testCompile 'io.reactivex:rxjava:1.3.8'
+    testCompile 'io.reactivex.rxjava2:rxjava:2.2.4'
+
     testCompile 'io.reactivex:rxnetty-http:0.5.2'
     testCompile 'io.netty:netty-all:4.1.32.Final'
-    testCompile 'com.netflix.hystrix:hystrix-core:1.5.8'
-    testCompile 'com.netflix.hystrix:hystrix-metrics-event-stream:1.5.8'
+    testCompile 'com.netflix.hystrix:hystrix-core:1.5.18'
+    testCompile 'com.netflix.hystrix:hystrix-metrics-event-stream:1.5.18'
 
-    testCompile 'com.google.guava:guava:18.0'
-    testCompile 'org.apache.commons:commons-collections4:4.1'
-    testCompile 'org.apache.commons:commons-lang3:3.5'
-    testCompile 'commons-dbutils:commons-dbutils:1.6'
-    testCompile 'commons-io:commons-io:2.5'
-    testCompile 'commons-dbutils:commons-dbutils:1.6'
+    testCompile 'com.google.guava:guava:27.0.1-jre'
+    testCompile 'org.apache.commons:commons-collections4:4.2'
+    testCompile 'org.apache.commons:commons-lang3:3.8.1'
+    testCompile 'commons-dbutils:commons-dbutils:1.7'
+    testCompile 'commons-io:commons-io:2.6'
 
-    testCompile 'ch.qos.logback:logback-classic:1.1.7'
-    testCompile 'org.slf4j:slf4j-api:1.7.21'
-    testCompile 'io.dropwizard:dropwizard-metrics:1.0.3'
+    testCompile 'ch.qos.logback:logback-classic:1.2.3'
+    testCompile 'org.slf4j:slf4j-api:1.7.25'
+    testCompile 'io.dropwizard:dropwizard-metrics:1.3.7'
 
-    testCompile 'org.springframework:spring-context:4.3.4.RELEASE'
-    testCompile 'org.springframework:spring-jms:4.3.4.RELEASE'
-    testCompile 'org.springframework:spring-jdbc:4.3.4.RELEASE'
+    testCompile 'org.springframework:spring-context:4.3.21.RELEASE'
+    testCompile 'org.springframework:spring-jms:4.3.21.RELEASE'
+    testCompile 'org.springframework:spring-jdbc:4.3.21.RELEASE'
 
     testCompile 'com.google.android:android:4.1.1.4'
 //    testCompile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
 
     testCompile 'org.postgresql:postgresql:9.4-1206-jdbc42'
-    testCompile 'org.twitter4j:twitter4j-stream:4.0.5'
+    testCompile 'org.twitter4j:twitter4j-stream:4.0.7'
     testCompile 'com.ning:async-http-client:1.9.40'
 
     testCompile 'javax.jms:jms-api:1.1-rev-1'
-    testCompile 'org.apache.activemq:activemq-client:5.14.1'
-    testCompile 'org.eclipse.jetty:jetty-servlet:9.4.0.RC2'
+    testCompile 'org.eclipse.jetty:jetty-servlet:9.4.14.v20181114'
 
-    testCompile 'com.couchbase.client:java-client:2.3.5'
-    testCompile 'org.mongodb:mongodb-driver-rx:1.2.0'
+    testCompile 'com.couchbase.client:java-client:2.7.2'
+    testCompile 'org.mongodb:mongodb-driver-rx:1.5.0'
 
-    testCompile 'org.apache.camel:camel-rx:2.17.3'
-    testCompile 'org.apache.camel:camel-kafka:2.17.3'
-    testCompile 'org.apache.activemq:activemq-camel:5.14.0'
-    testCompile 'org.apache.activemq:activemq-client:5.14.0'
+    testCompile 'org.apache.camel:camel-rx:2.23.0'
+    testCompile 'org.apache.camel:camel-kafka:2.23.0'
+    testCompile 'org.apache.activemq:activemq-camel:5.15.8'
+    testCompile 'org.apache.activemq:activemq-client:5.15.8'
 
-    testCompile 'com.squareup.retrofit2:adapter-rxjava:2.0.1'
-    testCompile 'com.squareup.retrofit2:converter-jackson:2.0.1'
+
+    testCompile 'com.squareup.retrofit2:adapter-rxjava:2.5.0'
+    testCompile 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
+    testCompile 'com.squareup.retrofit2:converter-jackson:2.5.0'
 
     testCompile 'junit:junit:4.12'
-    testCompile 'org.assertj:assertj-core:3.5.2'
-    testCompile 'org.mockito:mockito-core:2.2.15'
+    testCompile 'org.assertj:assertj-core:3.11.1'
+    testCompile 'org.mockito:mockito-core:2.23.4'
 }
